--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,106 +1,117 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Leaderboard · Phantom Picks</title>
 
-  <!-- site-wide styles only -->
-  <link rel="stylesheet" href="assets/css/styles.css?v=lb3">
+  <!-- Site styles -->
+  <link rel="stylesheet" href="/assets/css/styles.css?v=lb3" />
 </head>
-<body class="page-content no-rail">
-  <!-- header partial mount -->
-  <div id="header"></div>
+<body>
 
-  <main class="lb-wrap">
-    <!-- Page banner -->
+  <!-- Shared header (populated by your partial loader in assets/js/app.js) -->
+  <header id="site-header"></header>
+
+  <main class="page-content no-rail">
+    <!-- Banner -->
     <section class="league-banner leaderboard-banner">
       <div class="banner-inner">
         <h1>Leaderboard</h1>
-        <p>Track top winners, cold streaks, and weekly movers across the site.</p>
+        <p>Track the hottest hands and biggest swings across Phantom Picks.</p>
       </div>
     </section>
 
-    <!-- Filters -->
-    <div class="lb-filters" id="lb-filters">
-      <div class="left">
-        <div class="lb-seg" role="tablist" aria-label="Range">
-          <button class="is-active" data-range="7d" aria-selected="true">Last 7 days</button>
-          <button data-range="30d" aria-selected="false">Last 30 days</button>
-          <button data-range="all" aria-selected="false">All-time</button>
+    <div class="lb-wrap">
+      <!-- Filters -->
+      <div class="lb-filters">
+        <div class="left">
+          <div class="lb-seg" aria-label="Range">
+            <button type="button" class="is-active" data-range="7d">7 days</button>
+            <button type="button" data-range="30d">30 days</button>
+            <button type="button" data-range="all">All time</button>
+          </div>
+
+          <div class="lb-seg" aria-label="Scope">
+            <button type="button" class="is-active" data-scope="net">Net</button>
+            <button type="button" data-scope="roi">ROI</button>
+            <button type="button" data-scope="volume">Volume</button>
+          </div>
         </div>
-        <div class="lb-seg" role="tablist" aria-label="Scope">
-          <button class="is-active" data-scope="net" aria-selected="true">Net winnings</button>
-          <button data-scope="roi" aria-selected="false">ROI</button>
-          <button data-scope="volume" aria-selected="false">Volume</button>
+
+        <div class="right">
+          <label for="lb-sport" class="sr-only">Sport</label>
+          <select id="lb-sport" class="lb-select" aria-label="Sport">
+            <option value="all">All sports</option>
+            <option value="mlb">MLB</option>
+            <option value="nfl">NFL</option>
+            <option value="sec">CFB (Power 4 + ND)</option>
+          </select>
         </div>
       </div>
-      <div class="right">
-        <select class="lb-select" id="lb-sport" aria-label="Sport">
-          <option value="all">All sports</option>
-          <option value="mlb">MLB</option>
-          <option value="nfl">NFL</option>
-          <option value="sec">CFB (Power 4 + ND)</option>
-        </select>
-      </div>
+
+      <!-- Stat tiles -->
+      <section class="stat-grid" aria-label="Snapshot">
+        <article class="stat-card">
+          <div class="label">Active users</div>
+          <div class="value" id="stat-users">—</div>
+        </article>
+        <article class="stat-card">
+          <div class="label">Avg ROI</div>
+          <div class="value" id="stat-avg-roi">—</div>
+        </article>
+        <article class="stat-card">
+          <div class="label">Biggest single win</div>
+          <div class="value" id="stat-biggest-win">—</div>
+        </article>
+        <article class="stat-card">
+          <div class="label">Hottest streak</div>
+          <div class="value" id="stat-streak">—</div>
+        </article>
+      </section>
+
+      <!-- Side panels -->
+      <section class="columns">
+        <aside class="panel">
+          <h3>Top winners <span class="pill" id="winners-tag">—</span></h3>
+          <ol class="rank-list" id="winners-list" aria-live="polite"></ol>
+        </aside>
+
+        <aside class="panel">
+          <h3>Biggest losers <span class="pill" id="losers-tag">—</span></h3>
+          <ol class="rank-list" id="losers-list" aria-live="polite"></ol>
+        </aside>
+      </section>
+
+      <!-- Main table -->
+      <section class="table-wrap" aria-label="Leaderboard table">
+        <table class="lb">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>User</th>
+              <th>Record</th>
+              <th>Net</th>
+              <th>ROI</th>
+              <th>Best hit</th>
+              <th>Last 7d</th>
+            </tr>
+          </thead>
+          <tbody id="lb-tbody">
+            <!-- populated by assets/js/leaderboard.js -->
+          </tbody>
+        </table>
+      </section>
     </div>
-
-    <!-- Stat tiles -->
-    <section class="stat-grid" id="stat-grid">
-      <div class="stat-card">
-        <div class="label">Active bettors</div>
-        <div class="value" id="stat-users">—</div>
-      </div>
-      <div class="stat-card">
-        <div class="label">Avg ROI (selected range)</div>
-        <div class="value" id="stat-avg-roi">—</div>
-      </div>
-      <div class="stat-card">
-        <div class="label">Biggest single win</div>
-        <div class="value" id="stat-biggest-win">—</div>
-      </div>
-      <div class="stat-card">
-        <div class="label">Longest hot streak</div>
-        <div class="value" id="stat-streak">—</div>
-      </div>
-    </section>
-
-    <!-- Winners / Losers -->
-    <section class="columns">
-      <div class="panel">
-        <h3>Top Winners <span class="pill" id="winners-tag">7d · Net</span></h3>
-        <ul class="rank-list" id="winners-list"></ul>
-      </div>
-      <div class="panel">
-        <h3>Top Losers <span class="pill" id="losers-tag">7d · Net</span></h3>
-        <ul class="rank-list" id="losers-list"></ul>
-      </div>
-    </section>
-
-    <!-- Full table -->
-    <section class="table-wrap">
-      <table class="lb" aria-label="Leaderboard table">
-        <thead>
-          <tr>
-            <th>Rank</th>
-            <th>User</th>
-            <th>Record</th>
-            <th>Net</th>
-            <th>ROI</th>
-            <th>Best hit</th>
-            <th>Last 7d</th>
-          </tr>
-        </thead>
-        <tbody id="lb-tbody"></tbody>
-      </table>
-    </section>
   </main>
 
-  <!-- footer partial mount -->
-  <div id="footer"></div>
+  <!-- Shared footer (populated by partial loader) -->
+  <footer id="site-footer"></footer>
 
-  <!-- external scripts only (no inline code) -->
-  <script src="assets/js/app.js"></script>          <!-- mounts header/footer partials -->
-  <script src="assets/js/leaderboard.js"></script>  <!-- page logic (mock or real) -->
+  <!-- Your site bootstrap that mounts header/footer partials -->
+  <script src="/assets/js/app.js"></script>
+
+  <!-- Leaderboard page logic -->
+  <script src="/assets/js/leaderboard.js?v=lb3"></script>
 </body>
 </html>
