--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,7 +6,7 @@
   <title>Leaderboard · Phantom Picks</title>
 
   <!-- Site styles -->
-  <link rel="stylesheet" href="/assets/css/styles.css?v=lb3" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=lb4" />
 </head>
 <body>
 
@@ -109,9 +109,9 @@
   <footer id="site-footer"></footer>
 
   <!-- Your site bootstrap that mounts header/footer partials -->
-  <script src="/assets/js/app.js"></script>
+  <script src="assets/js/app.js"></script>
 
   <!-- Leaderboard page logic -->
-  <script src="/assets/js/leaderboard.js?v=lb3"></script>
+  <script src="assets/js/leaderboard.js?v=lb4"></script>
 </body>
 </html>
