--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=lb4" />
 </head>
 <body>
-
+<div id="header"></div>
   <!-- Shared header (populated by your partial loader in assets/js/app.js) -->
   <header id="site-header"></header>
 
