--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- Header partial goes here -->
-  <div id="site-header"></div>
+  <div id="header"></div>
 
   <!-- Main content -->
   <main class="page-content" id="leaderboard-page">
