--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Leaderboard · Phantom Picks</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/cards.css?v=1">
 
   <!-- Site styles (adjust the path if this file is in a subfolder) -->
   <link rel="stylesheet" href="assets/css/styles.css?v=lb1">
