--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/cards.css?v=1">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather:wght@400;700&family=Nabla&display=swap" rel="stylesheet">
+
+  
   <!-- Site styles (adjust the path if this file is in a subfolder) -->
   <link rel="stylesheet" href="assets/css/styles.css?v=lb1">
 </head>
