--- a/leaderboard.html
+++ b/leaderboard.html
@@ -116,7 +116,7 @@
   </main>
 
   <!-- Footer placeholder (filled by fetch) -->
-  <div id="footer" aria-hidden="true"></div>
+  <div id="app-footer" aria-hidden="true"></div>
 
   <script>
     // --- tiny helper to fetch partials with fallback paths ---
