lines 18-22 added a center

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -15,6 +15,13 @@
   
   <!-- Site styles (adjust the path if this file is in a subfolder) -->
   <link rel="stylesheet" href="assets/css/styles.css?v=lb1">
+  <style>
+  .page-content {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+</style>
+
 </head>
 
 <body>
