--- a/mlb.html
+++ b/mlb.html
@@ -31,7 +31,11 @@
 
     <!-- Odds board + right rail mount -->
     <div class="odds-layout">
-      <section id="odds-board" class="odds-board" aria-live="polite"></section>
+      <section id="odds-board" class="odds-board" aria-live="polite">
+          <div id="no-games" style="text-align:center; padding:20px; font-size:18px; opacity:0.7; display:none;">
+    No games available
+          </div>
+      </section>
       <div id="rail"></div>
     </div>
   </main>
