--- a/auth.html
+++ b/auth.html
@@ -73,6 +73,8 @@
     </section>
   </main>
 
+  <div id="app-footer" aria-hidden="true"></div>
+
   <!-- Tab toggler -->
   <script>
     document.addEventListener('click', e => {
