--- a/auth.html
+++ b/auth.html
@@ -4,9 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sign in · Phantom Picks</title>
+ <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/cards.css?v=1">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather:wght@400;700&family=Nabla&display=swap" rel="stylesheet">
   <!-- Site CSS (adjust path if this file sits in a subfolder) -->
-  <link rel="stylesheet" href="assets/css/styles.css?v=auth3">
+ <!-- <link rel="stylesheet" href="assets/css/styles.css?v=auth3"> -->
 </head>
 
 
