--- a/auth.html
+++ b/auth.html
@@ -19,7 +19,20 @@
 
 <body class="auth-page">
   
-<div id="app-header" aria-hidden="true"></div>
+ <!-- Slim header: logo + wordmark only -->
+  
+  <header class="site-header site-header--auth">
+    <a class="brand" href="/Game-Line/index.html">
+      <!-- Use the same logo src you use on your other pages -->
+      <img class="site-logo" src="assets/img/Phantom_Picks_Logo.png" alt="Phantom Picks logo" />
+      <span class="logo-text">Phantom Picks</span>
+    </a>
+    
+
+    <!-- deliberately empty; hidden by CSS on this page -->
+    <nav class="primary-nav" aria-hidden="true"></nav>
+    <div class="account-area" aria-hidden="true"></div>
+  </header>
 
 
   <main class="auth-wrap">
